@@ -11,11 +11,13 @@ import de.monticore.io.paths.MCPath;
 import de.monticore.java.java2cd.Java2CDConverter;
 import de.monticore.java.javadsl.JavaDSLMill;
 import de.monticore.java.javadsl._ast.ASTCompilationUnit;
+import de.monticore.java.javadsl._ast.ASTModularCompilationUnit;
+import de.monticore.java.javadsl._ast.ASTOrdinaryCompilationUnit;
+import de.monticore.java.javadsl._ast.ASTTypeDeclaration;
 import de.monticore.java.javadsl._symboltable.IJavaDSLArtifactScope;
-import de.monticore.java.javadsl._symboltable.JavaDSLScopesGenitorDelegator;
-import de.monticore.symbols.basicsymbols.BasicSymbolsMill;
-import de.monticore.symboltable.ImportStatement;
-import de.se_rwth.commons.Names;
+import de.monticore.java.utils.JavaDSLSymbolTableUtil;
+import de.monticore.types.mcbasictypes._ast.ASTMCQualifiedName;
+import de.se_rwth.commons.logging.Finding;
 import de.se_rwth.commons.logging.Log;
 import org.apache.commons.cli.*;
 
@@ -24,22 +26,22 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
-
+  
+  
+  protected static final String SYMBOLS_OUT_DIRECTORY = "target" + File.separator + "symbols";
+  
+  
   /**
    * main method of the JavaDSL
    *
    * @param args array of the command line arguments
    */
-
   public static void main(String[] args) {
     JavaDSLTool tool = new JavaDSLTool();
     tool.run(args);
@@ -52,7 +54,6 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
    *
    * @param args array of the command line arguments
    */
-
   @Override
   public void run(String[] args) {
     Options options = initOptions();
@@ -72,28 +73,92 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
 
       Log.init();
       JavaDSLMill.init();
-
-      BasicSymbolsMill.initializePrimitives();
-      BasicSymbolsMill.initializeString();
+      
+      boolean useClass2MC = cmd.hasOption("c2mc");
+      JavaDSLSymbolTableUtil.prepareMill(useClass2MC);
+      
+      MCPath symbolPath = new MCPath();
+      if (cmd.hasOption("path")) {
+        String[] paths = cmd.getOptionValues("path");
+        Arrays.stream(paths).forEach(p -> symbolPath.addEntry(Paths.get(p)));
+      }
+      JavaDSLMill.globalScope().setSymbolPath(symbolPath);
 
       Log.enableFailQuick(false);
-      Collection<ASTCompilationUnit> asts =
-          this.parse(".java", this.createModelPath(cmd).getEntries());
-      Log.enableFailQuick(true);
-
-      if (cmd.hasOption("path")) {
-        String[] paths = splitPathEntries(cmd.getOptionValue("path"));
-        JavaDSLMill.globalScope().setSymbolPath(new MCPath(paths));
+      Collection<ASTCompilationUnit> parsed = this.parse(".java", this.createModelPath(cmd).getEntries());
+      List<ASTCompilationUnit> asts = parsed.stream().filter(Objects::nonNull).collect(Collectors.toList());
+      if (asts.size() < parsed.size()) {
+        Set<String> errorFiles =
+            Log.getFindings().stream().map(Finding::getSourcePosition).filter(Optional::isPresent)
+                .map(x -> x.get().getFileName()).filter(Optional::isPresent).map(Optional::get)
+                .collect(Collectors.toSet());
+        Log.warn(String.format("There are %d files that could not be parsed!", errorFiles.size()));
       }
-
-      Collection<IJavaDSLArtifactScope> scopes =
-          asts.stream()
-              .map(ast -> createSymbolTable(ast, cmd))
-              .collect(Collectors.toList());
-
+      Log.clearFindings();
+      Log.enableFailQuick(true);
+      
+      Log.info(String.format("Successfully parsed %d files", asts.size()), "JavaDSLTool");
+      
+      if (cmd.hasOption("pp")) {
+        String[] ppTargets = cmd.getOptionValues("pp");
+        if (ppTargets == null || ppTargets.length == 0) {
+          asts.forEach(ast -> prettyPrintInFolder(ast, SYMBOLS_OUT_DIRECTORY));
+        }
+        else if (ppTargets.length == 1 && isLikelyFolderPath(cmd.getOptionValue("pp"))) {
+          asts.forEach(
+              compUnit -> prettyPrintInFolder(compUnit, cmd.getOptionValue("pp")));
+        }
+        else if (ppTargets.length == asts.size()
+            && ppTargets.length == cmd.getOptionValues("i").length) {
+          for (int i = 0; i < asts.size(); i++) {
+            prettyPrintInFolder(
+                asts.get(i),
+                ppTargets[i]
+            );
+          }
+        }
+        else {
+          Log.error(String.format("Received '%s' output files for the prettyprint option. "
+                  + "Expected that '%s' many output files are specified. "
+                  + "If output files for the prettyprint option are specified, then the number "
+                  + "of specified output files must be equal to the number of specified input files, "
+                  + "or one output folder should be specified.",
+              cmd.getOptionValues("pp").length, asts.size()));
+        }
+      }
+      
+      if (cmd.hasOption("s") || cmd.hasOption("o")) {
+        // Build symbol table and run symbol table completer
+        JavaDSLSymbolTableUtil.buildSymbolTable(asts);
+      }
+      
       if (cmd.hasOption("s")) {
-        for (IJavaDSLArtifactScope scope : scopes) {
-          this.storeSymTab(scope, cmd.getOptionValue("s"));
+        if (cmd.getOptionValues("s") == null || cmd.getOptionValues("s").length == 0) {
+          for (ASTCompilationUnit compilationUnit : asts) {
+            storeSymbolsInFolder(compilationUnit, SYMBOLS_OUT_DIRECTORY);
+          }
+        }
+        else if (cmd.getOptionValues("s").length == 1 &&
+            isLikelyFolderPath(cmd.getOptionValue("s"))) {
+          asts.forEach(
+              compUnit -> this.storeSymbolsInFolder(compUnit, cmd.getOptionValue("s")));
+        }
+        else if (cmd.getOptionValues("s").length == asts.size()
+            && cmd.getOptionValues("s").length == cmd.getOptionValues("i").length) {
+          for (int i = 0; i < asts.size(); i++) {
+            storeSymbols(
+                (IJavaDSLArtifactScope) asts.get(i).getEnclosingScope(),
+                cmd.getOptionValues("s")[i]
+            );
+          }
+        }
+        else {
+          Log.error(String.format("Received '%s' output files for the storesymbols option. "
+                  + "Expected that '%s' many output files are specified. "
+                  + "If output files for the storesymbols option are specified, then the number "
+                  + "of specified output files must be equal to the number of specified input files, "
+                  + "or one output folder should be specified.",
+              cmd.getOptionValues("s").length, asts.size()));
         }
       }
 
@@ -146,7 +211,7 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
             .argName("dir")
             .hasArg()
             .desc("Sets the output path.")
-            .build());
+            .get());
 
     options.addOption(
         Option.builder("ct")
@@ -154,7 +219,7 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
             .hasArg()
             .argName("template")
             .desc("Sets a template for configuration.")
-            .build());
+            .get());
 
     options.addOption(
         Option.builder("tp")
@@ -162,13 +227,13 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
             .hasArg()
             .argName("path")
             .desc("Sets the path for additional templates.")
-            .build());
+            .get());
 
     options.addOption(
         Option.builder("c2mc")
             .longOpt("class2mc")
             .desc("Enables to resolve java classes in the model path")
-            .build());
+            .get());
 
     return options;
   }
@@ -180,11 +245,8 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
    * @return path of all models
    */
   public MCPath createModelPath(CommandLine cmd) {
-    if (cmd.hasOption("i")) {
-      return new MCPath(splitPathEntries(cmd.getOptionValues("i")));
-    } else {
-      return new MCPath();
-    }
+    String[] inputPathEntries = cmd.getOptionValues("i");
+    return new MCPath(splitPathEntries(inputPathEntries));
   }
 
   /**
@@ -201,7 +263,7 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
    * splits the compound paths of all input models
    *
    * @param composedPaths combined paths of all models
-   * @return seperated paths of input models
+   * @return separated paths of input models
    */
   public final String[] splitPathEntries(String[] composedPaths) {
     return Arrays.stream(composedPaths)
@@ -243,38 +305,90 @@ public class JavaDSLTool extends de.monticore.java.javadsl.JavaDSLTool {
     }
     return Collections.emptySet();
   }
-
-
+  
   /**
-   * creates the symboltable for the given ast
+   * Stores the symbols for ast in the specified folder.
    *
-   * @param ast the input ast
-   * @param cmd cli arguments
-   * @return the symbol-table of the ast
+   * @param compilationUnit The ast of the Java CompilationUnit
+   * @param folderPath      The folder to store the symbols in
    */
-
-  public IJavaDSLArtifactScope createSymbolTable(ASTCompilationUnit ast, CommandLine cmd) {
-    JavaDSLScopesGenitorDelegator genitor = JavaDSLMill.scopesGenitorDelegator();
-    IJavaDSLArtifactScope scope = genitor.createFromAST(ast);
-    if (cmd.hasOption("c2mc")) {
-      scope.addImports(new ImportStatement("java.lang", true));
-    }
-    return scope;
+  protected void storeSymbolsInFolder(ASTCompilationUnit compilationUnit, String folderPath) {
+    String relativeFilePath = getRelativeFilePath(compilationUnit).concat(".javasym");
+    Path filePath = Paths.get(folderPath, relativeFilePath);
+    storeSymbols((IJavaDSLArtifactScope) compilationUnit.getEnclosingScope(), filePath.toString());
   }
-
+  
   /**
-   * prints the symboltable of the given scope out to a file
+   * Stores the pretty printed result for ast in the specified folder.
    *
-   * @param scope symboltable to store
-   * @param path location of the file or directory containing the printed table
+   * @param compilationUnit The ast of the Java CompilationUnit
+   * @param folderPath      The folder to store the pret
    */
-  public void storeSymTab(IJavaDSLArtifactScope scope, String path) {
-    if (Path.of(path).toFile().isFile()) {
-      this.storeSymbols(scope, path);
+  protected void prettyPrintInFolder(ASTCompilationUnit compilationUnit, String folderPath) {
+    String relativeFilePath = getRelativeFilePath(compilationUnit).concat(".java");
+    Path filePath = Paths.get(folderPath, relativeFilePath);
+    prettyPrint(compilationUnit, filePath.toString());
+  }
+  
+  /**
+   * finds the file (without extension) for ast,
+   * given its package and name.
+   * E.g.: model with qualified name a.b.c
+   * "a/b/c"
+   *
+   * @param compilationUnit The ast of the model
+   * @return the relative file path as String based on the models qualified name
+   */
+  protected String getRelativeFilePath(ASTCompilationUnit compilationUnit) {
+    Optional<ASTMCQualifiedName> qualifiedName = Optional.empty();
+    String artifactName = "";
+    if (compilationUnit instanceof ASTOrdinaryCompilationUnit ast) {
+      if (ast.isPresentPackageDeclaration()) {
+        qualifiedName = Optional.of(ast.getPackageDeclaration().getMCQualifiedName());
+      }
+      if (ast.getTypeDeclarationList().size() == 1) {
+        artifactName = ast.getTypeDeclarationList().getFirst().getName();
+      } else {
+        Optional<ASTTypeDeclaration> publicTypeDeclaration = ast.getTypeDeclarationList().stream().filter(x -> x.getSymbol().isIsPublic()).findFirst();
+        if (publicTypeDeclaration.isPresent()) {
+          artifactName = publicTypeDeclaration.get().getName();
+        }
+      }
+    } else if (compilationUnit instanceof ASTModularCompilationUnit ast) {
+      qualifiedName = Optional.of(ast.getModuleDeclaration().getMCQualifiedName());
+    }
+    
+    if (qualifiedName.isPresent()) {
+      String packagePath = qualifiedName.get().getQName().replace('.', File.separatorChar);
+      return Paths.get(packagePath, artifactName).toString();
     } else {
-      this.storeSymbols(scope, Paths.get(
-          path, Names.getPathFromPackage(scope.getFullName()) + ".javasym").toString());
+      if (artifactName.isBlank()) {
+        Log.error("0x7A005: Could not determine symbol table export path. "
+            + "Make sure that the file contains exactly one public class!");
+      }
+      return Paths.get(artifactName).toString();
     }
   }
-
+  
+  /**
+   * heuristic to test if the path seems to be a folder path
+   *
+   * @param pathStr the path to check
+   * @return whether we assume it is a path to a folder
+   */
+  protected boolean isLikelyFolderPath(String pathStr) {
+    // if it already exists, check:
+    Path path = Paths.get(pathStr);
+    File file = path.toFile();
+    if (file.exists()) {
+      return file.isDirectory();
+    }
+    // if it does not exist yet,
+    // check if the last part ends with an extension
+    // note that "a/b/.c" is expected to be a folder,
+    // "a/b/c.d" is not expected to be a folder,
+    // so we skip the first character
+    return !path.getFileName().toString().substring(1).contains(".");
+  }
+  
 }
